[package]
name = "s3box-sound"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp-hal", version = "0.18.0", features = [
    "embedded-hal",
    "esp32s3",
] }
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32s3", "uart"] }
es8311 = { git = "https://github.com/bjoernQ/es8311-rs", default-features = false }
embedded-hal = { version = "1.0.0" }
