[package]
name = "s3box-sound"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.18.0", features = ["embedded-hal", "esp32s3", "log"] }
esp-backtrace = { version = "0.12.0", features = ["esp32s3", "panic-handler", "exception-handler", "println", ] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }

embedded-hal = { version = "1.0.0" }

esp-hal-embassy = { version = "0.1.0", optional = true, features = ["esp32s3", "time-systimer-16mhz"] }
embassy-executor = { version = "0.5.0", optional = true, features = ["task-arena-size-12288", "integrated-timers", ] }
embassy-time = { version = "0.3.0", optional = true }

log = "0.4.21"
micromath = "0.5.1"

[features]
async = [
    "esp-hal/async",
    "dep:esp-hal-embassy",
    "dep:embassy-executor",
    "dep:embassy-time"
]

[[bin]]
name = "async"
required-features = ["async"]
